--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -1,34 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/base_start_color_default"
+    android:background="@color/zhy_backgroud_1"
     android:orientation="vertical">
 
-    <com.shian.shianlife.view.searchview.SearchView
-        android:id="@+id/search_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_80dp"
-        android:layout_marginBottom="@dimen/dimen_12dp"
-        android:layout_marginLeft="@dimen/dimen_16dp"
-        android:layout_marginRight="@dimen/dimen_16dp"
-        android:layout_marginTop="@dimen/dimen_12dp"
-        android:visibility="gone"></com.shian.shianlife.view.searchview.SearchView>
+        android:layout_height="match_parent"
+        android:background="@color/base_start_color_default"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_6dp" />
+        <com.shian.shianlife.view.searchview.CustomSearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_80dp"
+            android:layout_marginBottom="@dimen/dimen_12dp"
+            android:layout_marginLeft="@dimen/dimen_16dp"
+            android:layout_marginRight="@dimen/dimen_16dp"
+            android:layout_marginTop="@dimen/dimen_12dp"
+            android:visibility="gone"></com.shian.shianlife.view.searchview.CustomSearchView>
 
-    <include
-        android:id="@+id/layout_build_cemetery"
-        layout="@layout/layout_build_order_button"
-        android:visibility="gone"></include>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_18dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_6dp" />
 
-    <include
-        android:id="@+id/layout_build_funeral"
-        layout="@layout/layout_build_order_button"></include>
-</LinearLayout>
+        <include
+            android:id="@+id/layout_build_cemetery"
+            layout="@layout/layout_build_order_button"
+            android:visibility="gone"></include>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_18dp" />
+
+        <include
+            android:id="@+id/layout_build_funeral"
+            layout="@layout/layout_build_order_button"></include>
+
+        <com.shian.shianlife.view.listview.GoodsClassAttrMainListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_16dp"
+            android:background="@color/white"></com.shian.shianlife.view.listview.GoodsClassAttrMainListView>
+
+
+    </LinearLayout>
+
+</ScrollView>
