--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -18,8 +18,7 @@
             android:layout_marginBottom="@dimen/dimen_12dp"
             android:layout_marginLeft="@dimen/dimen_16dp"
             android:layout_marginRight="@dimen/dimen_16dp"
-            android:layout_marginTop="@dimen/dimen_12dp"
-            android:visibility="gone"></com.shian.shianlife.view.searchview.CustomSearchView>
+            android:layout_marginTop="@dimen/dimen_12dp"></com.shian.shianlife.view.searchview.CustomSearchView>
 
 
         <TextView
