--- a/app/src/main/res/layout/layout_build_order_button.xml
+++ b/app/src/main/res/layout/layout_build_order_button.xml
@@ -20,12 +20,29 @@
         android:layout_gravity="center_vertical"
         android:background="@color/main_blackground" />
 
-    <TextView
-        android:id="@+id/tv_build_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="@dimen/dimen_133dp"
-        android:textColor="@color/black_item_shua_textcolor"
-        android:textSize="@dimen/dimen_36dp" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_build_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dimen_133dp"
+            android:textColor="@color/black_item_shua_textcolor"
+            android:textSize="@dimen/dimen_36dp" />
+
+        <TextView
+            android:id="@+id/tv_build_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dimen_133dp"
+            android:layout_marginTop="@dimen/dimen_16dp"
+            android:textColor="@color/zhy_text_color_15"
+            android:textSize="@dimen/dimen_24dp" />
+    </LinearLayout>
+
+
 </LinearLayout>
