--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -8,6 +8,7 @@
         android:id="@+id/mainll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/zhy_backgroud_1"
         android:orientation="vertical">
 
         <include
