--- a/app/src/main/res/layout/activity_goods_details.xml
+++ b/app/src/main/res/layout/activity_goods_details.xml
@@ -1,18 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.shian.shianlife.activity.goods.GoodsDetailsActivity">
 
-    <LinearLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_750dp"
+            android:minHeight="@dimen/dimen_100dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <com.shian.shianlife.view.carousel.CarouselView
+                android:id="@+id/garouseview"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_750dp"></com.shian.shianlife.view.carousel.CarouselView>
+
+            <include layout="@layout/layout_good_details_title"></include>
+
+        </RelativeLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <com.shian.shianlife.view.carousel.CarouselView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_750dp"></com.shian.shianlife.view.carousel.CarouselView>
-    </LinearLayout>
-</ScrollView>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <include layout="@layout/layout_good_details_content"></include>
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+</android.support.design.widget.CoordinatorLayout>
