--- a/app/src/main/res/layout/view_carousel_main_layout.xml
+++ b/app/src/main/res/layout/view_carousel_main_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/zhy_backgroud_1"
     android:orientation="vertical">
 
 
@@ -10,10 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"></android.support.v4.view.ViewPager>
 
-    <RadioGroup
-        android:id="@+id/rg_content"
+    <com.shian.shianlife.view.picrg.PicRadioGroup
+        android:id="@+id/pic_rg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"></RadioGroup>
+        android:layout_centerHorizontal="true"></com.shian.shianlife.view.picrg.PicRadioGroup>
 </RelativeLayout>
