--- a/app/src/main/res/layout/layout_good_details_content.xml
+++ b/app/src/main/res/layout/layout_good_details_content.xml
@@ -25,12 +25,74 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="￥123"
-        android:textColor="@color/zhy_text_color_4"
-        android:textSize="@dimen/dimen_42dp"
-        android:textStyle="bold" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_price_range"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text=""
+            android:textColor="@color/zhy_text_color_4"
+            android:textSize="@dimen/dimen_42dp"
+            android:textStyle="bold" />
+
+        <ImageView
+
+            android:layout_width="@dimen/dimen_36dp"
+            android:layout_height="@dimen/dimen_36dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/zhy_good_price_icon" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dimen_16dp"
+        android:layout_marginTop="@dimen/dimen_28dp"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="@dimen/dimen_0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="原价："
+                android:textColor="@color/zhy_text_color_24"
+                android:textSize="@dimen/dimen_22dp" />
+
+            <TextView
+                android:id="@+id/tv_price_original"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/zhy_text_color_24"
+                android:textSize="@dimen/dimen_22dp" />
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/tv_sale_number"
+            android:layout_width="@dimen/dimen_0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/zhy_text_color_24"
+            android:textSize="@dimen/dimen_22dp" />
+
+
+        <TextView
+            android:id="@+id/tv_location"
+            android:layout_width="@dimen/dimen_0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/zhy_text_color_24"
+            android:textSize="@dimen/dimen_22dp" />
+    </LinearLayout>
 </LinearLayout>
