--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -68,12 +68,14 @@
     <color name="zhy_text_color_18">#727272</color>
     <color name="zhy_text_color_22">#5d5d5d</color>
     <color name="zhy_text_color_23">#989898</color>
+    <color name="zhy_text_color_24">#8a8a8a</color>
 
     <color name="zhy_title_color_1">#3baf92</color>
     <color name="zhy_rb_check_1">#ededed</color>
     <color name="zhy_rb_check_transparent">#00ffffff</color>
     <color name="zhy_rb_uncheck_1">#dedede</color>
     <color name="zhy_backgroud_1">#F1F6F5</color>
+    <color name="zhy_backgroud_2">#E8F0EE</color>
     <!-- Dialog Color -->
     <color name="version_msg_color">#ff6699ff</color>
     <color name="message_color">#ffccccff</color>
