--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -197,4 +197,9 @@
         <item name="android:textSize">@dimen/dimen_32dp</item>
         <item name="android:textColor">@color/dimgray</item>
     </style>
+
+    <style name="zhy_tablayout_text_style_2">
+        <item name="android:textColor">@color/zhy_text_color_1</item>
+        <item name="android:textSize">@dimen/dimen_32dp</item>
+    </style>
 </resources>
