商品详情制作

--- a/app/src/main/res/layout/layout_good_details_content.xml
+++ b/app/src/main/res/layout/layout_good_details_content.xml
@@ -41,7 +41,7 @@
             android:textStyle="bold" />
 
         <ImageView
-
+            android:id="@+id/iv_all_price"
             android:layout_width="@dimen/dimen_36dp"
             android:layout_height="@dimen/dimen_36dp"
             android:layout_gravity="center_vertical"
