--- a/app/src/main/res/layout/activity_goods_details.xml
+++ b/app/src/main/res/layout/activity_goods_details.xml
@@ -32,8 +32,10 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:descendantFocusability="blocksDescendants"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,7 +57,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></com.shian.shianlife.view.goods.GoodsDescribeLayout>
 
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dimen_116dp" />
         </LinearLayout>
 
+
     </android.support.v4.widget.NestedScrollView>
+
+    <include layout="@layout/layout_goods_details_buttons"></include>
 </android.support.design.widget.CoordinatorLayout>
