--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -1,49 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/zhy_backgroud_1"
+
     android:orientation="vertical">
 
-    <LinearLayout
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/base_start_color_default"
-        android:orientation="vertical">
+        android:background="@color/zhy_backgroud_1">
 
-        <com.shian.shianlife.view.searchview.CustomSearchView
-            android:id="@+id/search_view"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_80dp"
-            android:layout_marginBottom="@dimen/dimen_12dp"
-            android:layout_marginLeft="@dimen/dimen_16dp"
-            android:layout_marginRight="@dimen/dimen_16dp"
-            android:layout_marginTop="@dimen/dimen_12dp"></com.shian.shianlife.view.searchview.CustomSearchView>
+            android:layout_height="match_parent"
+            android:background="@color/base_start_color_default"
+            android:orientation="vertical">
+
+            <com.shian.shianlife.view.searchview.CustomSearchView
+                android:id="@+id/search_view"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_80dp"
+                android:layout_marginBottom="@dimen/dimen_12dp"
+                android:layout_marginLeft="@dimen/dimen_16dp"
+                android:layout_marginRight="@dimen/dimen_16dp"
+                android:layout_marginTop="@dimen/dimen_12dp"></com.shian.shianlife.view.searchview.CustomSearchView>
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_6dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_6dp" />
 
-        <include
-            android:id="@+id/layout_build_cemetery"
-            layout="@layout/layout_build_order_button"></include>
+            <include
+                android:id="@+id/layout_build_cemetery"
+                layout="@layout/layout_build_order_button"></include>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_18dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_18dp" />
 
-        <include
-            android:id="@+id/layout_build_funeral"
-            layout="@layout/layout_build_order_button"></include>
+            <include
+                android:id="@+id/layout_build_funeral"
+                layout="@layout/layout_build_order_button"></include>
 
-        <com.shian.shianlife.view.listview.GoodsClassAttrMainListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_16dp"
-            android:background="@color/white"></com.shian.shianlife.view.listview.GoodsClassAttrMainListView>
+            <com.shian.shianlife.view.listview.GoodsClassAttrMainListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_16dp"
+                android:background="@color/white"></com.shian.shianlife.view.listview.GoodsClassAttrMainListView>
 
 
-    </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
-</ScrollView>
+
+    <com.shian.shianlife.view.goods.GoodsShoppingCartButton
+        android:id="@+id/bt_goods_shopping_cart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"></com.shian.shianlife.view.goods.GoodsShoppingCartButton>
+
+
+</RelativeLayout>
