--- a/app/src/main/res/layout/layout_goods_describle.xml
+++ b/app/src/main/res/layout/layout_goods_describle.xml
@@ -26,9 +26,9 @@
     </RelativeLayout>
 
 
-    <android.support.v4.view.ViewPager
+    <com.shian.shianlife.view.ScrollViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.v4.view.ViewPager>
+        android:layout_height="wrap_content"></com.shian.shianlife.view.ScrollViewPager>
 
 </LinearLayout>
