--- a/app/src/main/res/layout/layout_goods_spec_select.xml
+++ b/app/src/main/res/layout/layout_goods_spec_select.xml
@@ -12,6 +12,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_goods_spec_select_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
