--- a/app/src/main/res/layout/activity_goods_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_goods_shopping_cart.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.shian.shianlife.activity.goods.GoodsShoppingCartActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <com.shian.shianlife.view.listview.GoodsShoppingCartListView
+        android:id="@+id/listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"></com.shian.shianlife.view.listview.GoodsShoppingCartListView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_1dp"
+        android:background="@color/zhy_backgroud_1" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_100dp"
+        android:background="@color/white"
+        android:orientation="horizontal"></LinearLayout>
+</LinearLayout>
