--- a/app/src/main/res/layout/activity_goods_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_goods_shopping_cart.xml
@@ -22,5 +22,55 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_100dp"
         android:background="@color/white"
-        android:orientation="horizontal"></LinearLayout>
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <CheckBox
+            android:id="@+id/check"
+            android:layout_width="@dimen/dimen_36dp"
+            android:layout_height="@dimen/dimen_36dp"
+            android:layout_marginBottom="@dimen/dimen_24dp"
+            android:layout_marginLeft="@dimen/dimen_16dp"
+            android:layout_marginTop="@dimen/dimen_24dp"
+            android:background="@drawable/zhy_check_box_style_1"
+            android:button="@null" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dimen_26dp"
+            android:text="全选"
+            android:textColor="@color/zhy_text_color_16"
+            android:textSize="@dimen/dimen_28dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dimen_66dp"
+            android:text="合计："
+            android:textColor="@color/zhy_text_color_16"
+            android:textSize="@dimen/dimen_24dp" />
+
+        <TextView
+            android:id="@+id/tv_total_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dimen_32dp"
+            android:layout_marginRight="@dimen/dimen_16dp"
+            android:layout_weight="1"
+            android:text="￥0.0"
+            android:textColor="@color/zhy_text_color_4"
+            android:textSize="@dimen/dimen_28dp" />
+
+
+        <TextView
+            android:id="@+id/tv_submit"
+            android:layout_width="@dimen/dimen_250dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/zhy_submit_button_style_1_check"
+            android:gravity="center"
+            android:text="结算"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dimen_28dp" />
+    </LinearLayout>
 </LinearLayout>
