--- a/app/src/main/res/values/widget.xml
+++ b/app/src/main/res/values/widget.xml
@@ -120,4 +120,14 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:layout_weight">1</item>
     </style>
+
+    <style name="store_order_details_text_1">
+        <item name="android:textSize">@dimen/dimen_24dp</item>
+        <item name="android:textColor">@color/zhy_text_color_18</item>
+        <item name="android:paddingLeft">@dimen/dimen_16dp</item>
+        <item name="android:paddingRight">@dimen/dimen_16dp</item>
+        <item name="android:paddingTop">@dimen/dimen_14dp</item>
+        <item name="android:paddingBottom">@dimen/dimen_14dp</item>
+        <item name="android:background">@color/white</item>
+    </style>
 </resources>
