--- a/app/src/main/res/layout/activity_goods_order_settlement.xml
+++ b/app/src/main/res/layout/activity_goods_order_settlement.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:MyViewAttr="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,8 +13,22 @@
         android:orientation="vertical">
 
         <com.shian.shianlife.view.goods.GoodsServiceInfoLayout
+            android:id="@+id/layout_service_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></com.shian.shianlife.view.goods.GoodsServiceInfoLayout>
+        <com.shian.shianlife.view.goods.StoreExpandableTitleView
+            android:id="@+id/goods_expand_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_24dp"
+            MyViewAttr:titleName="商品清单"></com.shian.shianlife.view.goods.StoreExpandableTitleView>
 
+        <com.shian.shianlife.view.ScrollExpandableListView
+            android:id="@+id/goods_expand_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:groupIndicator="@null"
+            android:visibility="gone"></com.shian.shianlife.view.ScrollExpandableListView>
     </LinearLayout>
 </ScrollView>
