--- a/app/src/main/res/layout/activity_goods_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_goods_shopping_cart.xml
@@ -36,9 +36,13 @@
             android:button="@null" />
 
         <TextView
+            android:id="@+id/tv_check_all"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dimen_26dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/zhy_button_state_ll_white"
+            android:gravity="center"
+            android:paddingLeft="@dimen/dimen_26dp"
+            android:paddingRight="@dimen/dimen_66dp"
             android:text="全选"
             android:textColor="@color/zhy_text_color_16"
             android:textSize="@dimen/dimen_28dp" />
@@ -46,7 +50,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dimen_66dp"
             android:text="合计："
             android:textColor="@color/zhy_text_color_16"
             android:textSize="@dimen/dimen_24dp" />
