--- a/app/src/main/res/layout/activity_goods_order_settlement.xml
+++ b/app/src/main/res/layout/activity_goods_order_settlement.xml
@@ -1,34 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:MyViewAttr="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.shian.shianlife.activity.goods.GoodsOrderSettlementActivity">
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <com.shian.shianlife.view.goods.GoodsServiceInfoLayout
+                android:id="@+id/layout_service_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></com.shian.shianlife.view.goods.GoodsServiceInfoLayout>
+
+            <com.shian.shianlife.view.goods.StoreExpandableTitleView
+                android:id="@+id/goods_expand_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_24dp"
+                MyViewAttr:titleName="商品清单"></com.shian.shianlife.view.goods.StoreExpandableTitleView>
+
+            <com.shian.shianlife.view.ScrollExpandableListView
+                android:id="@+id/goods_expand_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:groupIndicator="@null"
+                android:visibility="gone"></com.shian.shianlife.view.ScrollExpandableListView>
+
+            <com.shian.shianlife.view.goods.StoreExpandableTitleView
+                android:id="@+id/invoice_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                MyViewAttr:titleName="发票信息"></com.shian.shianlife.view.goods.StoreExpandableTitleView>
+
+            <com.shian.shianlife.view.goods.StoreEditNormalView
+                android:id="@+id/layout_remark"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                MyViewAttr:hintText="在此填入备注文字"
+                MyViewAttr:titleName="备注"
+                MyViewAttr:visibilityLine="true"></com.shian.shianlife.view.goods.StoreEditNormalView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_1dp"
+                android:background="@color/zhy_line_3" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_80dp"
+                android:background="@color/white"
+                android:gravity="right"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/dimen_16dp"
+                    android:gravity="center_vertical"
+                    android:text="推荐价"
+                    android:textColor="@color/zhy_text_color_16" />
+
+                <TextView
+                    android:id="@+id/tv_money_customer"
+                    android:layout_width="@dimen/dimen_200dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/dimen_16dp"
+                    android:gravity="center_vertical|right"
+                    android:text=""
+                    android:textColor="@color/zhy_text_color_4" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_136dp" />
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/dimen_80dp"
+        android:background="@color/white"
         android:orientation="vertical">
 
-        <com.shian.shianlife.view.goods.GoodsServiceInfoLayout
-            android:id="@+id/layout_service_info"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></com.shian.shianlife.view.goods.GoodsServiceInfoLayout>
-        <com.shian.shianlife.view.goods.StoreExpandableTitleView
-            android:id="@+id/goods_expand_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dimen_24dp"
-            MyViewAttr:titleName="商品清单"></com.shian.shianlife.view.goods.StoreExpandableTitleView>
+            android:layout_height="@dimen/dimen_1dp"
+            android:background="@color/zhy_line_3" />
 
-        <com.shian.shianlife.view.ScrollExpandableListView
-            android:id="@+id/goods_expand_list_view"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:groupIndicator="@null"
-            android:visibility="gone"></com.shian.shianlife.view.ScrollExpandableListView>
+            android:layout_height="match_parent"
+            android:gravity="right"
+            android:orientation="horizontal"
+            android:weightSum="3">
+
+            <LinearLayout
+                android:id="@+id/ll_submit_total_price"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="@dimen/dimen_16dp"
+                android:layout_weight="2"
+                android:gravity="center_vertical|right"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_submit_price_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="合计："
+                    android:textColor="@color/zhy_text_color_16"
+                    android:textSize="@dimen/dimen_24dp" />
+
+                <TextView
+                    android:id="@+id/tv_submit_price_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="￥324"
+                    android:textColor="@color/zhy_text_color_4"
+                    android:textSize="@dimen/dimen_26dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/tv_submit"
+                android:layout_width="@dimen/dimen_0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/zhy_submit_button_style_1"
+                android:gravity="center"
+                android:text="下一步"
+                android:textColor="@color/white"
+                android:textSize="@dimen/dimen_28dp" />
+        </LinearLayout>
     </LinearLayout>
-</ScrollView>
+</LinearLayout>
