--- a/app/src/main/res/layout/layout_store_edit_normal_view.xml
+++ b/app/src/main/res/layout/layout_store_edit_normal_view.xml
@@ -7,7 +7,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:orientation="horizontal"
         android:paddingLeft="@dimen/dimen_32dp"
         android:paddingRight="@dimen/dimen_16dp">
@@ -16,9 +15,8 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:paddingBottom="@dimen/dimen_34dp"
-            android:paddingTop="@dimen/dimen_34dp"
+            android:paddingBottom="@dimen/dimen_26dp"
+            android:paddingTop="@dimen/dimen_26dp"
             android:text=""
             android:textColor="@color/zhy_text_color_16"
             android:textSize="@dimen/dimen_28dp" />
@@ -31,9 +29,9 @@
             android:layout_marginLeft="@dimen/dimen_16dp"
             android:layout_weight="1"
             android:background="@null"
-            android:gravity="center_vertical|right"
-            android:paddingBottom="@dimen/dimen_34dp"
-            android:paddingTop="@dimen/dimen_34dp"
+            android:gravity="right"
+            android:paddingBottom="@dimen/dimen_26dp"
+            android:paddingTop="@dimen/dimen_26dp"
             android:text=""
             android:textColor="@color/black"
             android:textSize="@dimen/dimen_28dp" />
@@ -48,10 +46,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/dimen_34dp"
+                android:paddingBottom="@dimen/dimen_26dp"
                 android:paddingLeft="@dimen/dimen_16dp"
                 android:paddingRight="@dimen/dimen_16dp"
-                android:paddingTop="@dimen/dimen_34dp"
+                android:paddingTop="@dimen/dimen_26dp"
                 android:text="请选择"
                 android:textColor="@color/zhy_text_color_18" />
 
@@ -66,6 +64,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/iv_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_1dp"
         android:layout_marginLeft="@dimen/dimen_32dp"
