--- a/app/src/main/res/layout/activity_goods_order_settlement.xml
+++ b/app/src/main/res/layout/activity_goods_order_settlement.xml
@@ -120,7 +120,7 @@
                     android:id="@+id/tv_submit_price_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="合计："
+                    android:text="推荐价："
                     android:textColor="@color/zhy_text_color_16"
                     android:textSize="@dimen/dimen_24dp" />
 
@@ -128,7 +128,7 @@
                     android:id="@+id/tv_submit_price_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="￥324"
+                    android:text="￥0"
                     android:textColor="@color/zhy_text_color_4"
                     android:textSize="@dimen/dimen_26dp"
                     android:textStyle="bold" />
