--- a/app/src/main/res/layout/layout_goods_describle_security.xml
+++ b/app/src/main/res/layout/layout_goods_describle_security.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_height="@dimen/dimen_1280dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/zhy_icon_security" />
 </LinearLayout>
